force-app/main/default/objects/clariti__Record_Detail_Page_Layout_Mapping__mdt/clariti__Record_Detail_Page_Layout_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Record Detail Page Layout Mapping</label>
    <pluralLabel>Record Detail Page Layout Mapping</pluralLabel>
</CustomObject>