force-app/main/default/objects/clariti__Record_Detail_Page_Layout_Mapping__mdt/fields/clariti__Record_Detail_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>clariti__Record_Detail_Object_Type__c</fullName>
    <label>Record Detail Object Type</label>
    <referenceTo>clariti__Record_Detail_Object_Type__mdt</referenceTo>
    <relationshipName>Record_Layout_Definition</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>