force-app/main/default/objects/clariti__Record_Detail_Page_Layout_Mapping__mdt/fields/clariti__Sections__c.field-meta.xml
<CustomField>
    <fullName>clariti__Sections__c</fullName>
    <description>Comma separated list of Section Names from Page Layout.</description>
    <label>Sections</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>