force-app/main/default/objects/clariti__Record_Detail_Page_Layout_Mapping__mdt/fields/clariti__Type__c.field-meta.xml
<CustomField>
    <fullName>clariti__Type__c</fullName>
    <description>The API Name of the picklist value from the Type Field of the Object configured in the Record Detail Object Type.</description>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>