force-app/main/default/objects/clariti__Record_Detail_Page_Layout_Mapping__mdt/fields/clariti__Type_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Type_Field_API_Name__c</fullName>
    <inlineHelpText>Specify the API name of the picklist field which will be used to filter the Page Layout.</inlineHelpText>
    <label>Type Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>